package.json updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visualpath",
-  "homepage": "https://Suhaan-Bhandary.github.io/Path-Finding-Visualizer",
+  "homepage": "https://yvrjprshr.github.io/path-finding-visualizer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
